; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/pg_test_fsync/extr_pg_test_fsync.c_test_open_sync.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/pg_test_fsync/extr_pg_test_fsync.c_test_open_sync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LABEL_FORMAT = common dso_local global i8* null, align 8
@stdout = common dso_local global i32 0, align 4
@NA_FORMAT = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [4 x i8] c"n/a\00", align 1
@OPEN_SYNC_FLAG = common dso_local global i32 0, align 4
@O_RDWR = common dso_local global i32 0, align 4
@PG_O_DIRECT = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@START_TIMER = common dso_local global i32 0, align 4
@STOP_TIMER = common dso_local global i32 0, align 4
@alarm_triggered = common dso_local global i32 0, align 4
@buf = common dso_local global i32 0, align 4
@filename = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @test_open_sync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_open_sync(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i8*, i8** @LABEL_FORMAT, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @printf(i8* %5, i8* %6)
  %8 = load i32, i32* @stdout, align 4
  %9 = call i32 @fflush(i32 %8)
  %10 = load i8*, i8** @NA_FORMAT, align 8
  %11 = call i8* @_(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %12 = call i32 @printf(i8* %10, i8* %11)
  ret void
}

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i8* @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
